[] Fix visibility of selected entities

--- a/front/src/components/commons/entityActions/style.scss
+++ b/front/src/components/commons/entityActions/style.scss
@@ -1,6 +1,7 @@
 
 .ActionsBar-bar {
   background-color: #e0e0e0;
+  z-index: 3;
 }
 
 .ActionsBar-actionsList {
